--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "dev": "npm run build:w & nodemon ./dist",
     "test": "jest",
     "test:w": "jest --watch",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "test:e2e": "./node_modules/.bin/cucumber-js ./tests/e2e/features/**/*.feature",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" ",
+    "lint": "tslint -p tsconfig.json",
+    "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
@@ -26,20 +28,29 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "cucumber": "^5.1.0",
     "express": "^4.16.4",
     "kafka-node": "^4.0.1",
+    "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
-    "typedi": "^0.8.0"
+    "typedi": "^0.8.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.7",
     "@types/cors": "^2.8.4",
+    "@types/cucumber": "^4.0.4",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/kafka-node": "^2.0.7",
+    "@types/superagent": "^3.8.6",
+    "chai": "^4.2.0",
     "jest": "^24.0.0",
     "prettier": "^1.16.3",
+    "superagent": "^4.1.0",
     "ts-jest": "^23.10.5",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.17.0",
