--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "serve": "node ./dist",
     "build:w": "tsc -w",
     "dev": "npm run build:w & nodemon ./dist",
     "test": "jest",
@@ -46,6 +47,7 @@
     "@types/kafka-node": "^2.0.7",
     "@types/superagent": "^3.8.6",
     "chai": "^4.2.0",
+    "chai-json": "^1.0.0",
     "jest": "^24.0.0",
     "prettier": "^1.16.3",
     "superagent": "^4.1.0",
