--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "outDir": "dist/",
         "listFiles": false,
         "noEmitHelpers": false,
+        "resolveJsonModule": true,
         "typeRoots": [
             "./src/@types",
             "./node_modules/@types"
